--- a/style.css
+++ b/style.css
@@ -2,8 +2,8 @@
     background-color: darksalmon;
 }
 .cabeçalho-título {
-    color: lightseagreen;
+    color: rgb(248, 31, 31);
 }
 .cabeçalho-imagem {
-    width: 25px;
+    width: 150px;
 }
